--- a/nucleo_code/Makefile
+++ b/nucleo_code/Makefile
@@ -1,11 +1,28 @@
 # name of your application
-APPLICATION = safetyfloater
+APPLICATION = I2c-riot
+
+# utilities for MPU 
+ifneq (,$(wildcard $(CURDIR)../../RIOT/tests*/.))
+  DEFAULT_MODULE += test_utils_interactive_sync
+  # add interactive test configuration when testing Kconfig
+  ifeq (1,$(TEST_KCONFIG))
+    KCONFIG_ADD_CONFIG += $(RIOTBASE)/tests/test_interactive.config
+  endif
+endif
+
+ifneq (,$(filter tests_driver_%,$(APPLICATION)))
+  BOARD ?= nucleo-f401re
+endif
+
+# MPU-9250 driver
+DRIVER ?= mpu9250
+USEMODULE += $(DRIVER)
 
 # If no BOARD is found in the environment, use this default:
 BOARD ?= nucleo-f401re
 
 # This has to be the absolute path to the RIOT base directory:
-RIOTBASE ?= $(CURDIR)/../..
+RIOTBASE ?= $(CURDIR)/../../RIOT
 
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
@@ -30,5 +47,3 @@ FEATURES_OPTIONAL += periph_rtc
 
 
 #to compile use -Wno-unused-variable
-
-
