--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
     "aws-iot-device-sdk": "^2.2.6",
     "aws-sdk": "^2.900.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "crypto": "^1.0.1",
     "dotenv": "^8.5.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.7"
   }
 }
