--- a/raspberry_code/requirements.txt
+++ b/raspberry_code/requirements.txt
@@ -1,6 +1,9 @@
-awsiotsdk==1.5.14
-awscrt==0.11.14
+google_auth_oauthlib==0.4.4
 picamera==1.13
+awsiotsdk==1.5.14
 tensorflow==2.4.0
+awscrt==0.11.14
 awsiot==0.1.3
+google_api_python_client==2.3.0
+protobuf==3.16.0
 pyserial==3.5
