--- a/raspberry_code/requirements.txt
+++ b/raspberry_code/requirements.txt
@@ -1,9 +1,10 @@
-google_auth_oauthlib==0.4.4
-picamera==1.13
+boto3==1.9.86
 awsiotsdk==1.5.14
 tensorflow==2.4.0
+google_auth_oauthlib==0.4.4
 awscrt==0.11.14
+picamera==1.13
 awsiot==0.1.3
-google_api_python_client==2.3.0
-protobuf==3.16.0
+google_api_python_client==2.4.0
+protobuf==3.17.0
 pyserial==3.5
